# Python-Projects

Todo-FastApi/: .env  pyproject.toml  requirements.txt  vercel.json
Todo-FastApi/first_poetry/: main.py  settings.py
Todo-FastApi/tests/: test_fastapi.py
first-class/: .env  pyproject.toml
first-class/first_class/: abc1.py  main.py  settings.py
poetry_project/: Dockerfile.dev  pyproject.toml
poetry_project/poetry_project/: main.py
